Fixes the chart and root layout to not scroll the whole page. - Only the right side of the app now scrolls. - Account chart behaves properly being in a overflow hidden container.

--- a/src/renderer/layout/root/root.layout.scss
+++ b/src/renderer/layout/root/root.layout.scss
@@ -6,4 +6,6 @@
 
 .main-content {
   padding: 20px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
