--- a/src/renderer/renderer.scss
+++ b/src/renderer/renderer.scss
@@ -15,7 +15,6 @@ html {
 }
 
 body {
-  @extend .scroll-bar-styled;
   height: 100%;
 }
 
